--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,5 +1,9 @@
 ## Append samples of your project ##
 resources:
-- sv_v1alpha1_sharedvolume.yaml
 - sv_v1alpha1_clustersharedvolume.yaml
+- sv_v1alpha1_sharedvolume.yaml
+- sharedvolume1.yaml
+- sharedvolume_with_nfsserver_path.yaml
+- sharedvolume_with_default_path.yaml
+- sharedvolume_with_replicas.yaml
 # +kubebuilder:scaffold:manifestskustomizesamples
