--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -31,7 +31,26 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - persistentvolumeclaims/finalizers
+  - persistentvolumes/finalizers
+  - pods/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - ""
+  resources:
   - pods
+  verbs:
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
   verbs:
   - get
   - list
@@ -50,7 +69,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - nfs.sharedvolume.io
+  - sharedvolume.io
   resources:
   - nfsservers
   verbs:
@@ -64,7 +83,6 @@ rules:
 - apiGroups:
   - sv.sharedvolume.io
   resources:
-  - clustersharedvolumes
   - sharedvolumes
   verbs:
   - create
@@ -77,14 +95,12 @@ rules:
 - apiGroups:
   - sv.sharedvolume.io
   resources:
-  - clustersharedvolumes/finalizers
   - sharedvolumes/finalizers
   verbs:
   - update
 - apiGroups:
   - sv.sharedvolume.io
   resources:
-  - clustersharedvolumes/status
   - sharedvolumes/status
   verbs:
   - get
