sv and csv running 2

--- a/config/crd/bases/sv.sharedvolume.io_clustersharedvolumes.yaml
+++ b/config/crd/bases/sv.sharedvolume.io_clustersharedvolumes.yaml
@@ -11,6 +11,8 @@ spec:
     kind: ClusterSharedVolume
     listKind: ClusterSharedVolumeList
     plural: clustersharedvolumes
+    shortNames:
+    - csv
     singular: clustersharedvolume
   scope: Cluster
   versions:
