--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -24,3 +24,49 @@ webhooks:
     resources:
     - pods
   sideEffects: None
+---
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingWebhookConfiguration
+metadata:
+  name: validating-webhook-configuration
+webhooks:
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-sv-sharedvolume-io-v1alpha1-clustersharedvolume
+  failurePolicy: Fail
+  name: vclustersharedvolume.kb.io
+  rules:
+  - apiGroups:
+    - sv.sharedvolume.io
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - clustersharedvolumes
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-sv-sharedvolume-io-v1alpha1-sharedvolume
+  failurePolicy: Fail
+  name: vsharedvolume.kb.io
+  rules:
+  - apiGroups:
+    - sv.sharedvolume.io
+    apiVersions:
+    - v1alpha1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - sharedvolumes
+  sideEffects: None
