--- a/config/samples/example-pod/alpine2.yaml
+++ b/config/samples/example-pod/alpine2.yaml
@@ -3,7 +3,8 @@ kind: Pod
 metadata:
   name: alpine-sample-pod-2
   annotations:
-    sharedvolume.sv: "sharedvolume-with-sync"
+    sharedvolume.sv: "sv1,sv2"
+    sharedvolume.csv: "csv1,csv2"
   labels:
     app: alpine-sample
 spec:
