git credential test

--- a/test/e2e/manifests/csv/success-git-secret-csv-10.yaml
+++ b/test/e2e/manifests/csv/success-git-secret-csv-10.yaml
@@ -11,10 +11,9 @@ spec:
     capacity: "{{STORAGE_CAPACITY_MEDIUM}}"
   source:
     git:
-      url: "{{GIT_REPO_GITLAB}}"
+      url: "{{GIT_REPO}}"
       branch: "{{GIT_BRANCH}}"
       passwordFromSecret:
         name: git-credentials
         key: token
         namespace: {{TEST_NAMESPACE_2}}
-      path: "{{GIT_PATH_PUBLIC}}"
