--- a/test/e2e/manifests/csv/success-http-secret-csv-8.yaml
+++ b/test/e2e/manifests/csv/success-http-secret-csv-8.yaml
@@ -11,12 +11,4 @@ spec:
     capacity: "{{STORAGE_CAPACITY_MEDIUM}}"
   source:
     http:
-      url: "{{HTTP_URL_SECURE}}"
-      usernameFromSecret:
-        name: http-auth
-        key: username
-        namespace: {{TEST_NAMESPACE_1}}
-      passwordFromSecret:
-        name: http-auth
-        key: password
-        namespace: {{TEST_NAMESPACE_1}}
+      url: "{{HTTP_URL}}"
