--- a/test/e2e/manifests/csv/success-s3-secret-csv-12.yaml
+++ b/test/e2e/manifests/csv/success-s3-secret-csv-12.yaml
@@ -11,7 +11,8 @@ spec:
     capacity: "{{STORAGE_CAPACITY_LARGE}}"
   source:
     s3:
-      bucket: "{{S3_BUCKET_ENTERPRISE}}"
+      bucketName: "{{S3_BUCKET}}"
+      endpointUrl: "{{S3_ENDPOINT_URL}}"
       region: "{{S3_REGION}}"
       accessKeyFromSecret:
         name: s3-credentials
@@ -21,4 +22,4 @@ spec:
         name: s3-credentials
         key: secret-key
         namespace: {{TEST_NAMESPACE_3}}
-      path: "{{S3_PATH_PUBLIC}}"
+      path: "{{S3_PATH}}"
