--- a/test/e2e/manifests/csv/success-ssh-password-secret-csv-4.yaml
+++ b/test/e2e/manifests/csv/success-ssh-password-secret-csv-4.yaml
@@ -11,7 +11,7 @@ spec:
     capacity: "{{STORAGE_CAPACITY_MEDIUM}}"
   source:
     ssh:
-      host: "{{SSH_HOST_SECURE}}"
+      host: "{{SSH_HOST}}"
       user: "{{SSH_USER}}"
       passwordFromSecret:
         name: ssh-auth
