--- a/test/e2e/manifests/sv/success-git-secret-sv-10.yaml
+++ b/test/e2e/manifests/sv/success-git-secret-sv-10.yaml
@@ -12,9 +12,8 @@ spec:
     capacity: "{{STORAGE_CAPACITY_MEDIUM}}"
   source:
     git:
-      url: "{{GIT_REPO_GITLAB}}"
+      url: "{{GIT_REPO}}"
       branch: "{{GIT_BRANCH}}"
       passwordFromSecret:
         name: git-credentials
         key: token
-      path: "{{GIT_PATH_PUBLIC}}"
