--- a/test/e2e/manifests/sv/success-http-secret-sv-8.yaml
+++ b/test/e2e/manifests/sv/success-http-secret-sv-8.yaml
@@ -12,7 +12,7 @@ spec:
     capacity: "{{STORAGE_CAPACITY_MEDIUM}}"
   source:
     http:
-      url: "{{HTTP_URL_SECURE}}"
+      url: "{{HTTP_URL}}"
       usernameFromSecret:
         name: http-auth
         key: username
