--- a/test/e2e/manifests/sv/success-ssh-privatekey-secret-sv-6.yaml
+++ b/test/e2e/manifests/sv/success-ssh-privatekey-secret-sv-6.yaml
@@ -12,8 +12,8 @@ spec:
     capacity: "{{STORAGE_CAPACITY_MEDIUM}}"
   source:
     ssh:
-      host: "{{SSH_HOST_KEY}}"
-      user: "{{SSH_USER_KEY}}"
+      host: "{{SSH_HOST}}"
+      user: "{{SSH_USER}}"
       privateKeyFromSecret:
         name: ssh-key-auth
         key: private-key
