--- a/test/e2e/manifests/csv/success-s3-basic-csv-11.yaml
+++ b/test/e2e/manifests/csv/success-s3-basic-csv-11.yaml
@@ -11,7 +11,8 @@ spec:
     capacity: "{{STORAGE_CAPACITY_LARGE}}"
   source:
     s3:
-      bucket: "{{S3_BUCKET}}"
+      bucketName: "{{S3_BUCKET}}"
+      endpointUrl: "{{S3_ENDPOINT_URL}}"
       region: "{{S3_REGION}}"
       accessKey: "{{S3_ACCESS_KEY}}"
       secretKey: "{{S3_SECRET_KEY}}"
