--- a/test/e2e/manifests/ns/externalObjects.yaml
+++ b/test/e2e/manifests/ns/externalObjects.yaml
@@ -3,41 +3,20 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ssh-auth
-  namespace: {{TEST_NAMESPACE_1}}
+  namespace: "{{TEST_NAMESPACE_1}}"
 type: Opaque
 data:
-  password: {{B64_SSH_PASSWORD}} # base64: ssh-password-123
+  password: "{{B64_SSH_PASSWORD}}" # base64: ssh-password-123
 
 ---
 apiVersion: v1
 kind: Secret
 metadata:
   name: ssh-key-auth
-  namespace: {{TEST_NAMESPACE_1}}
+  namespace: "{{TEST_NAMESPACE_1}}"
 type: Opaque
 data:
-  private-key: {{B64_SSH_PRIVATE_KEY}} # base64: ssh-private-key-123
-
-# HTTP Credentials
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: http-auth
-  namespace: {{TEST_NAMESPACE_1}}  
-type: Opaque
-data:
-  password: {{B64_HTTP_TOKEN}} # base64: http-token-123
-
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: http-credentials
-  namespace: {{TEST_NAMESPACE_4}}
-type: Opaque
-data:
-  api-token: {{B64_API_TOKEN}} # base64: api-token-abc123
+  private-key: "{{B64_SSH_PRIVATE_KEY}}" # base64: ssh-private-key-123
 
 # Git Credentials  
 ---
@@ -45,20 +24,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: git-credentials
-  namespace: {{TEST_NAMESPACE_2}}
+  namespace: "{{TEST_NAMESPACE_2}}"
 type: Opaque
 data:
-  token: {{B64_GIT_TOKEN}} # base64: {{GIT_TOKEN}}
-
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: git-auth
-  namespace: {{TEST_NAMESPACE_5}}
-type: Opaque
-data:
-  access-token: {{B64_GITLAB_TOKEN}} # base64: gitlab-token-xyz456
+  token: "{{B64_GIT_TOKEN}}" # base64: "{{GIT_TOKEN}}"
 
 # S3 Credentials
 ---
@@ -66,19 +35,19 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: s3-credentials
-  namespace: {{TEST_NAMESPACE_3}}
+  namespace: "{{TEST_NAMESPACE_3}}"
 type: Opaque
 data:
-  access-key: {{B64_S3_ACCESS_KEY}} # base64: AKIAEXAMPLE123
-  secret-key: {{B64_S3_SECRET_KEY}} # base64: secretkey123example
+  access-key: "{{B64_S3_ACCESS_KEY}}" # base64: AKIAEXAMPLE123
+  secret-key: "{{B64_S3_SECRET_KEY}}" # base64: secretkey123example
 
 ---
 apiVersion: v1
 kind: Secret
 metadata:
   name: s3-credentials
-  namespace: {{TEST_NAMESPACE_2}}
+  namespace: "{{TEST_NAMESPACE_2}}"
 type: Opaque
 data:
-  access-key: {{B64_S3_ACCESS_KEY}} # base64: AKIAEXAMPLE123
-  secret-key: {{B64_S3_SECRET_KEY}} # base64: secretkey123example
+  access-key: "{{B64_S3_ACCESS_KEY}}" # base64: AKIAEXAMPLE123
+  secret-key: "{{B64_S3_SECRET_KEY}}" # base64: secretkey123example
