--- a/test/e2e/manifests/ns/test-namespaces.yaml
+++ b/test/e2e/manifests/ns/test-namespaces.yaml
@@ -2,24 +2,24 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{TEST_NAMESPACE_1}}
+  name: "{{TEST_NAMESPACE_1}}"
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{TEST_NAMESPACE_2}}
+  name: "{{TEST_NAMESPACE_2}}"
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{TEST_NAMESPACE_3}}
+  name: "{{TEST_NAMESPACE_3}}"
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{TEST_NAMESPACE_4}}
+  name: "{{TEST_NAMESPACE_4}}"
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: {{TEST_NAMESPACE_5}}
+  name: "{{TEST_NAMESPACE_5}}"
