--- a/test/e2e/manifests/sv/success-s3-secret-sv-12.yaml
+++ b/test/e2e/manifests/sv/success-s3-secret-sv-12.yaml
@@ -12,7 +12,8 @@ spec:
     capacity: "{{STORAGE_CAPACITY_LARGE}}"
   source:
     s3:
-      bucket: "{{S3_BUCKET_ENTERPRISE}}"
+      bucketName: "{{S3_BUCKET}}"
+      endpointUrl: "{{S3_ENDPOINT_URL}}"
       region: "{{S3_REGION}}"
       accessKeyFromSecret:
         name: s3-credentials
@@ -20,4 +21,4 @@ spec:
       secretKeyFromSecret:
         name: s3-credentials
         key: secret-key
-      path: "{{S3_PATH_PUBLIC}}"
+      path: "{{S3_PATH}}"
