--- a/test/e2e/manifests/sv/success-ssh-password-secret-sv-4.yaml
+++ b/test/e2e/manifests/sv/success-ssh-password-secret-sv-4.yaml
@@ -12,7 +12,7 @@ spec:
     capacity: "{{STORAGE_CAPACITY_MEDIUM}}"
   source:
     ssh:
-      host: "{{SSH_HOST_SECURE}}"
+      host: "{{SSH_HOST}}"
       user: "{{SSH_USER}}"
       passwordFromSecret:
         name: ssh-auth
