test for release.yaml

--- a/examples/csv/02-git-no-password.yaml
+++ b/examples/csv/02-git-no-password.yaml
@@ -10,9 +10,24 @@ spec:
   storage:
     capacity: "2Gi"
   source:
-    git:
-      url: "https://github.com/bilgehannal/bringer-data.git"
+      type: git
+      url: "https://github.com/example/demo-data.git"
       branch: "main"
+      targetPath: "/data"
+---
+apiVersion: sv.sharedvolume.io/v1alpha1
+kind: ClusterSharedVolume
+metadata:
+  name: git-no-password-2
+spec:
+  capacity: "1Gi"
+  accessModes:
+    - ReadOnlyMany
+  nfsServerReplicas: 1
+  source:
+    source:
+      type: git
+      url: "https://github.com/example/demo-data.git"
 ---
 apiVersion: sv.sharedvolume.io/v1alpha1
 kind: SharedVolume
