--- a/examples/csv/04-git-basic-secret.yaml
+++ b/examples/csv/04-git-basic-secret.yaml
@@ -11,13 +11,29 @@ spec:
     capacity: "2Gi"
   source:
     git:
-      url: "https://github.com/bilgehannal/gp-server-side.git"
+      url: "https://github.com/example/demo-project.git"
       branch: "master"
-      user: "bilgehannal"
-      passwordFromSecret:
-        name: git-credentials
-        key: token
-        namespace: sv-csv-test-ns-1
+      user: "demouser"
+      secretRef:
+        name: git-basic-secret
+        namespace: shared-volume-controller-system
+---
+apiVersion: sv.sharedvolume.io/v1alpha1
+kind: SharedVolume
+metadata:
+  name: git-basic-secret-sv
+spec:
+  mountPath: "/opt/mnt/git-basic"
+  syncInterval: "1m"
+  syncTimeout: "30s"
+  storageClassName: "standard"
+  storage:
+    capacity: "2Gi"
+  source:
+    git:
+      url: "https://github.com/example/demo-project.git"
+      branch: "master"
+      user: "demouser"
 ---
 apiVersion: sv.sharedvolume.io/v1alpha1
 kind: SharedVolume
