--- a/examples/csv/09-ssh-key-secret.yaml
+++ b/examples/csv/09-ssh-key-secret.yaml
@@ -18,7 +18,7 @@ spec:
         name: private-key-for-git
         key: private-key
         namespace: sv-csv-test-ns-1
-      path: "/opt/bilgehan"
+      path: "/opt/demo"
 ---
 apiVersion: sv.sharedvolume.io/v1alpha1
 kind: SharedVolume
@@ -39,4 +39,4 @@ spec:
       privateKeyFromSecret:
         name: private-key-for-git
         key: private-key
-      path: "/opt/bilgehan"
+      path: "/opt/demo"
