--- a/examples/csv/03-success-git-basic.yaml
+++ b/examples/csv/03-success-git-basic.yaml
@@ -11,9 +11,9 @@ spec:
     capacity: "2Gi"
   source:
     git:
-      url: "https://bitbucket.int.sahibinden.com/scm/misc/jenkins-devops-libs.git"
+      url: "https://git.example.com/scm/config/deployment-configs.git"
       branch: "master"
-      user: "bilgehan.nal"
+      user: "demo.user"
       password: "***"
 ---
 apiVersion: sv.sharedvolume.io/v1alpha1
@@ -29,7 +29,7 @@ spec:
     capacity: "2Gi"
   source:
     git:
-      url: "https://github.com/bilgehannal/gp-server-side.git"
+      url: "https://github.com/example/demo-project.git"
       branch: "master"
-      user: "bilgehannal"
+      user: "demouser"
       password: "***"
