--- a/examples/csv/06-git-key-secret.yaml
+++ b/examples/csv/06-git-key-secret.yaml
@@ -11,12 +11,26 @@ spec:
     capacity: "2Gi"
   source:
     git:
-      url: "ssh://git@bitbucket.int.sahibinden.com:7999/srp/srp-chart.git"
+      url: "ssh://git@git.example.com:7999/demo/demo-chart.git"
       branch: "master"
-      privateKeyFromSecret:
-        name: private-key-for-git
-        key: private-key
-        namespace: sv-csv-test-ns-1
+      secretRef:
+        name: git-key-secret
+        namespace: shared-volume-controller-system
+---
+apiVersion: sv.sharedvolume.io/v1alpha1
+kind: SharedVolume
+metadata:
+  name: git-key-secret-sv
+spec:
+  mountPath: "/opt/mnt/git-basic"
+  syncInterval: "1m"
+  syncTimeout: "30s"
+  storageClassName: "standard"
+  storage:
+    capacity: "2Gi"
+  source:
+    git:
+      url: "ssh://git@git.example.com:7999/demo/demo-chart.git"
 ---
 apiVersion: sv.sharedvolume.io/v1alpha1
 kind: SharedVolume
