--- a/examples/csv/08-ssh-basic-secret.yaml
+++ b/examples/csv/08-ssh-basic-secret.yaml
@@ -18,7 +18,7 @@ spec:
         name: ssh-user-pass
         key: private-key
         namespace: sv-csv-test-ns-1
-      path: "/opt/bilgehan"
+      path: "/opt/demo"
 ---
 apiVersion: sv.sharedvolume.io/v1alpha1
 kind: SharedVolume
@@ -39,4 +39,4 @@ spec:
       privateKeyFromSecret:
         name: ssh-user-pass
         key: password
-      path: "/opt/bilgehan"
+      path: "/opt/demo"
