--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,6 +23,9 @@ jobs:
       with:
         go-version: '1.24'
 
+    - name: Clean local tools
+      run: rm -rf bin/
+
     - name: Get version
       id: version
       run: |
