config change for nfs

--- a/examples/pod/01-csv-single.yaml
+++ b/examples/pod/01-csv-single.yaml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
   name: csv-single
   annotations:
-    sharedvolume.csv: "http-nfs-name"
+    sharedvolume.csv: "http-csv"
   labels:
     app: complex-multi-test
 spec:
