--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -5,4 +5,4 @@ kind: Kustomization
 images:
 - name: controller
   newName: docker.io/sharedvolume/shared-volume-controller
-  newTag: test-0.0.222
+  newTag: 0.0.229
