ready for first minor version

--- a/examples/csv/02-git-no-password.yaml
+++ b/examples/csv/02-git-no-password.yaml
@@ -42,4 +42,4 @@ spec:
     capacity: "2Gi"
   source:
     git:
-      url: "https://github.com/bilgehannal/bringer-data.git"
+      url: "https://github.com/example/demo-data.git"
