--- a/examples/csv/04-git-basic-secret.yaml
+++ b/examples/csv/04-git-basic-secret.yaml
@@ -48,9 +48,9 @@ spec:
     capacity: "2Gi"
   source:
     git:
-      url: "https://github.com/bilgehannal/gp-server-side.git"
-      branch: "master"
-      user: "bilgehannal"
+      url: "https://github.com/example/sample-project.git"
+      branch: "main"
+      user: "demo-user"
       passwordFromSecret:
         name: git-credentials
         key: token
