--- a/examples/csv/06-git-key-secret.yaml
+++ b/examples/csv/06-git-key-secret.yaml
@@ -45,7 +45,7 @@ spec:
     capacity: "2Gi"
   source:
     git:
-      url: "ssh://git@bitbucket.int.sahibinden.com:7999/srp/srp-chart.git"
+      url: "ssh://git@git.example.com:7999/org/sample-chart.git"
       branch: "master"
       privateKeyFromSecret:
         name: private-key-for-git
