--- a/examples/csv/12-s3-secret.yaml
+++ b/examples/csv/12-s3-secret.yaml
@@ -12,7 +12,7 @@ spec:
   source:
     s3:
       bucketName: "testbucket"
-      endpointUrl: "http://10.113.241.157:9010"
+      endpointUrl: "http://s3.example.com:9010"
       region: "us-east-1"
       accessKeyFromSecret:
         name: s3
@@ -38,7 +38,7 @@ spec:
   source:
     s3:
       bucketName: "testbucket"
-      endpointUrl: "http://10.113.241.157:9010"
+      endpointUrl: "http://s3.example.com:9010"
       region: "us-east-1"
       accessKeyFromSecret:
         name: s3
