--- a/examples/csv/08-ssh-basic-secret.yaml
+++ b/examples/csv/08-ssh-basic-secret.yaml
@@ -11,7 +11,7 @@ spec:
     capacity: "2Gi"
   source:
     ssh:
-      host: "10.113.241.157"
+      host: "ssh.example.com"
       port: 22
       user: "user2"
       privateKeyFromSecret:
@@ -33,7 +33,7 @@ spec:
     capacity: "2Gi"
   source:
     ssh:
-      host: "10.113.241.157"
+      host: "ssh.example.com"
       port: 22
       user: "user2"
       privateKeyFromSecret:
