--- a/examples/csv/11-s3.yaml
+++ b/examples/csv/11-s3.yaml
@@ -12,7 +12,7 @@ spec:
   source:
     s3:
       bucketName: "testbucket"
-      endpointUrl: "http://10.113.241.157:9010"
+      endpointUrl: "http://s3.example.com:9010"
       region: "us-east-1"
       accessKey: "minioadmin"
       secretKey: "minioadmin123"
@@ -32,7 +32,7 @@ spec:
   source:
     s3:
       bucketName: "testbucket"
-      endpointUrl: "http://10.113.241.157:9010"
+      endpointUrl: "http://s3.example.com:9010"
       region: "us-east-1"
       accessKey: "minioadmin"
       secretKey: "minioadmin123"
